アイキャッチ画像ファイル

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="CSS完全に理解した|大本さんからの宿題" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ueda-shinya.github.io/css_perfect/index.html" />
-    <meta property="og:image" content="https://ueda-shinya.github.io/css_perfect/img/css_perfect.jpg" />
+    <meta property="og:image" content="https://ueda-shinya.github.io/css_perfect/img/css_perfect.png" />
     <meta property="og:site_name" content="CSS完全に理解した" />
     <meta property="og:description" content="大本さんお誕生日おめでとうございます" />
     <!-- アイキャッチ設定ここまで -->
